[project]
name = "mars-time"
version = "1.0.0"
description = "Convert between Earth times and Mars times."
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "pydata-sphinx-theme>=0.16.1",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "sphinx>=7.4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mars_time"]